--- a/app/generator/templates/generator/home.html
+++ b/app/generator/templates/generator/home.html
@@ -22,6 +22,6 @@
   <br>
     <input type="checkbox" name="special"> Special Characters
   <br>
-    <input type="submit" value="Generate Password" class="btn btn-primary">
+    <input type="submit" value="Generate Password" class="btn btn-warning">
   </form>
 </div>
